<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.title.TitleScreen"
    >

    <data>

        <variable
            name="viewModel"
            type="dev.filipebezerra.android.androiddevtrivia.ui.title.TitleViewModel"
            />
    </data>

    <FrameLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/titleImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_header_height"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/android_trivia"
            />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/extended_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/fab_content_description"
            android:onClick="@{() -> viewModel.playGame()}"
            android:text="@string/play_game_text"
            app:icon="@drawable/ic_videogame_asset_24"
            />
    </FrameLayout>
</layout>